src/components/public/styles/form.css
.form-container {
  background-color: #ffe1e1;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.input-container {
  display: flex;
  flex-direction: column;
  margin-bottom: 25px;
}

.form-subcontainer {
  margin-top: 5rem;
  align-items: center;
  justify-content: center;
  display: flex;
}

.white-container {
  background-color: rgb(255, 255, 255);
  height: 40rem;
  width: 60rem;
  display: flex;
  align-items: center; /* Center content vertically */
  flex-direction: column;
  border-radius: 50px;
  align-items: center;
  justify-content: center;
  transition: 0.5s;
}

.white-container:hover {
  box-shadow: 1px 1px 10px rgba(97, 61, 61, 0.329);
}

.input-boxes {
  display: flex;
  margin-bottom: 40px;
  align-items: center;
  justify-content: center;
}

